--- a/JASP-Desktop/analysisforms/MachineLearning/mlregressionknnform.ui
+++ b/JASP-Desktop/analysisforms/MachineLearning/mlregressionknnform.ui
@@ -397,7 +397,7 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>k fold</string>
+               <string>k-fold</string>
               </property>
              </widget>
             </item>
@@ -850,7 +850,7 @@
          <item row="1" column="0">
           <widget class="BoundGroupBox" name="noOfNearestNeighbours">
            <property name="title">
-            <string>No. nearest neighbours</string>
+            <string>No. nearest neighbors</string>
            </property>
            <property name="flat">
             <bool>false</bool>
@@ -971,6 +971,101 @@
            </layout>
           </widget>
          </item>
+         <item row="0" column="1">
+          <widget class="BoundGroupBox" name="noOfTrees_2">
+           <property name="title">
+            <string>Weigths</string>
+           </property>
+           <property name="flat">
+            <bool>false</bool>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_13">
+            <item row="0" column="0">
+             <widget class="BoundComboBox" name="weights">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <item>
+               <property name="text">
+                <string>unweighted</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>optimal</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>triangular</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>epanechnikov</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>biweight</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>triweight</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>cos</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>inv</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>gaussian</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>rank</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <spacer name="verticalSpacer_7">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <spacer name="horizontalSpacer_5">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
         </layout>
        </widget>
       </item>
@@ -992,7 +1087,7 @@
          <property name="leftMargin">
           <number>13</number>
          </property>
-         <item row="1" column="0">
+         <item row="1" column="1">
           <widget class="GroupBox" name="plots">
            <property name="maximumSize">
             <size>
@@ -1006,6 +1101,9 @@
            <layout class="QGridLayout" name="gridLayout_10">
             <item row="0" column="0">
              <widget class="BoundCheckBox" name="plotErrorVsK">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="text">
                <string>Error vs K</string>
               </property>
@@ -1014,7 +1112,7 @@
            </layout>
           </widget>
          </item>
-         <item row="0" column="0">
+         <item row="0" column="1">
           <widget class="GroupBox" name="tables">
            <property name="title">
             <string>Tables</string>
@@ -1117,41 +1215,17 @@
        </widget>
       </item>
       <item row="0" column="5">
-       <widget class="BoundGroupBox" name="noOfTrees_2">
-        <property name="title">
-         <string>Weigths</string>
+       <spacer name="horizontalSpacer_6">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
-        <property name="flat">
-         <bool>false</bool>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
         </property>
-        <layout class="QGridLayout" name="gridLayout_13">
-         <item row="0" column="0">
-          <widget class="BoundComboBox" name="weights">
-           <property name="enabled">
-            <bool>true</bool>
-           </property>
-           <item>
-            <property name="text">
-             <string>Unweighted</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <spacer name="verticalSpacer_7">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </widget>
+       </spacer>
       </item>
      </layout>
     </widget>
@@ -1297,6 +1371,38 @@
     <hint type="destinationlabel">
      <x>484</x>
      <y>1365</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>optimized_2</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>plotErrorVsK</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>76</x>
+     <y>915</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>609</x>
+     <y>868</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>validationLeaveOneOut</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>plotErrorVsK</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>405</x>
+     <y>1383</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>609</x>
+     <y>868</y>
     </hint>
    </hints>
   </connection>
