--- a/JASP-Desktop/analysisforms/MachineLearning/mlclassificationknnform.ui
+++ b/JASP-Desktop/analysisforms/MachineLearning/mlclassificationknnform.ui
@@ -339,22 +339,6 @@
          <property name="bottomMargin">
           <number>3</number>
          </property>
-         <item row="2" column="0">
-          <widget class="AnovaModelWidget" name="modelTerms" native="true">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>200</height>
-            </size>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="0">
           <widget class="ExpanderButton" name="expanderModel">
            <property name="sizePolicy">
@@ -364,8 +348,44 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Make predictions for new data</string>
+            <string>Predictions for New Data</string>
            </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="BoundGroupBox" name="groupBox_3">
+           <property name="title">
+            <string>Tables</string>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_23">
+            <item row="1" column="0">
+             <widget class="BoundCheckBox" name="newPredictions">
+              <property name="text">
+               <string>Predictions</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0">
+             <widget class="BoundCheckBox" name="newFrequencies">
+              <property name="text">
+               <string>Frequencies</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <spacer name="verticalSpacer_12">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </widget>
          </item>
         </layout>
@@ -408,19 +428,6 @@
             <bool>false</bool>
            </property>
            <layout class="QGridLayout" name="gridLayout_21">
-            <item row="0" column="0">
-             <widget class="QRadioButton" name="auto_3">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Auto</string>
-              </property>
-             </widget>
-            </item>
             <item row="1" column="1">
              <widget class="BoundTextBox" name="distanceParameterManual">
               <property name="sizePolicy">
@@ -443,8 +450,8 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
-             <widget class="QRadioButton" name="manual_3">
+            <item row="0" column="0">
+             <widget class="QRadioButton" name="auto_3">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -452,9 +459,22 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>Manual</string>
+               <string>Auto</string>
               </property>
              </widget>
+            </item>
+            <item row="2" column="0">
+             <spacer name="verticalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
             <item row="1" column="2">
              <spacer name="horizontalSpacer_3">
@@ -469,18 +489,18 @@
               </property>
              </spacer>
             </item>
-            <item row="2" column="0">
-             <spacer name="verticalSpacer_4">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
+            <item row="1" column="0">
+             <widget class="QRadioButton" name="manual_3">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
               </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
+              <property name="text">
+               <string>Manual</string>
               </property>
-             </spacer>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -1555,12 +1575,6 @@
    <class>boundSingleItemView</class>
    <extends>QListView</extends>
    <header>widgets/boundsingleitemview.h</header>
-  </customwidget>
-  <customwidget>
-   <class>AnovaModelWidget</class>
-   <extends>QWidget</extends>
-   <header>widgets/anovamodelwidget.h</header>
-   <container>1</container>
   </customwidget>
   <customwidget>
    <class>BoundComboBox</class>
