added test set accuracy plot

--- a/JASP-Desktop/analysisforms/MachineLearning/mlregressionknnform.ui
+++ b/JASP-Desktop/analysisforms/MachineLearning/mlregressionknnform.ui
@@ -1194,17 +1194,14 @@
             <string>Plots</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_10">
-            <item row="0" column="0">
-             <widget class="BoundCheckBox" name="plotErrorVsK">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
+            <item row="1" column="0">
+             <widget class="BoundCheckBox" name="accuracyPlot">
               <property name="text">
-               <string>Error vs K</string>
+               <string>Test set accuracy</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
+            <item row="3" column="0">
              <spacer name="verticalSpacer_9">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -1216,6 +1213,16 @@
                </size>
               </property>
              </spacer>
+            </item>
+            <item row="2" column="0">
+             <widget class="BoundCheckBox" name="plotErrorVsK">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Error vs K</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
